[tool.poetry]
name = "tagdronephotos"
version = "0.1.0"
description = ""
authors = ["Kiskadee <Kiskadee.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.3.5"
geopy = "^2.3.0"
pillow = "^9.5.0"


[tool.poetry.group.dev.dependencies]
sphinx-rtd-theme = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
